# opencv

./: CMakeLists.txt  Tbb.cpp  brightness-adjust.py  c++.cpp  canny.cpp  canny_m.cpp  canny_p.cpp  canny_t.cpp  cannytest.cpp  crop_canny.cpp  crop_test.cpp  cropped.cpp  cuda.cpp  cuda_crop.cpp  edp.cpp  kernel_test.cpp  main.cpp  minrectangle-CUDA.cpp  minrectangle-thread.cpp  openmp.cpp  openmp_n.cpp  original-CUDA.cpp  original-thread.cpp  speed.cpp  speed_test.cpp  thread.py  ypc.cpp  原始線性流程.py
Test_images/Cropped/: 0000.tiff  0001.tiff  0002.tiff  0003.tiff  0004.tiff  0005.tiff  0006.tiff  0007.tiff  0008.tiff  0009.tiff  0010.tiff  0011.tiff  0012.tiff  0013.tiff  0014.tiff  0015.tiff  0016.tiff  0017.tiff  0018.tiff  0019.tiff  0020.tiff  0021.tiff  0022.tiff  0023.tiff  0024.tiff  0025.tiff  0026.tiff  0027.tiff  0028.tiff  0029.tiff  0030.tiff  0031.tiff  0032.tiff  0033.tiff  0034.tiff  0035.tiff  0036.tiff  0037.tiff  0038.tiff  0039.tiff  (+152 more)
